# simpleRESTful

./: README.md  requirements.txt  run_tests.sh  setup.cfg
mytest/: __init__.py  config.py
mytest/api_1_0/: __init__.py
mytest/tests/: test_api.py
