[metadata]
name = mytest
summary = test a basic RESTful
description-file = README.md
license = GNU
author = Jia Li
author_email = [bigben80@gmail.com]

[files]
packages =
  mytest
data_files =
  bin = bin/*

[entry_points]
console_scripts =
    mytest-api = mytest:run
    mytest-version = mytest:version

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

